<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Taxi Mobile</string>
	<string name="app_name">Taxi Mobile</string>
	<string name="main_title">TaxiMobile</string>
	<string name="nosotrosLabel">Nosotros</string>
	<string name="serviciosLabel">Servicios</string>
	<string name="tarifasLabel">Tarifas</string>
	<string name="sugerenciasLabel">Sugerencias</string>
	<string name="inicioSesionLabel">Inicio Sesion</string>
	<string name="acercaDeLabel">Acerca De</string>
	<string name="nosotros_text">
		Bienvenidos,\n\n
		<b>Taxi Mobile</b>
		es una de las empresas con mayor tiempo en Lima, Perú. Ofrecemos un
		amplio
		rango de servicios de taxi y contamos con una amplia flota de vehículos
		nuevos y cómodos
		para brindarles la mejor EXPERIENCIA, SEGURIDAD Y PUNTUALIDAD LOS 365 DÍAS
		DEL AÑO.\n\n
		Servicios:\n
		• Taxi Particular\n
		• Taxi Corporativo\n
		• Taxi Aeropuerto\n
		• Taxi por Horas\n
		• Servicios de Van
	</string>
	<string name="nosotros_title">Nosotros</string>
	<string name="opciones_title">Bienvenid@</string>
	<string name="cerrarSesionLabel">Cerrar Sesion</string>
	<string name="rankingTaxisLabel">Ranking de Taxis</string>
	<string name="seguimientoReservasLabel">Seguimiento de Reservas</string>
	<string name="solicitarTaxiLabel">Solicitar Taxi</string>
	
	<string name="nombres">Nombres</string>
	<string name="apePaterno">Apellido Paterno</string>
	<string name="apeMaterno">Apellido Materno</string>
	<string name="celular">Celular</string>
	<string name="email">Correo Electronico</string>
	<string name="usuario">Usuario</string>
	<string name="clave">Clave</string>
	<string name="registrarDatos">Registrar Datos</string>
	<string name="regresar">Regresar</string>
	<string name="numeroUsuarios">Numero de Usuarios: </string>
	
	
</resources>

