<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrllvwNo1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/MiTema"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dip" >

            <TextView
                style="@style/Texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombres" />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:autoText="false" android:inputType="textPersonName" />

            <TextView
                style="@style/Texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apePaterno" />

            <EditText
                android:id="@+id/txtApePat"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:autoText="false" android:inputType="textPersonName"/>

            <TextView
                style="@style/Texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apeMaterno" />

            <EditText
                android:id="@+id/txtApeMat"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:autoText="false" android:inputType="textPersonName" />

            <TextView
                style="@style/Texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celular" />

            <EditText
                android:id="@+id/txtCelular"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:digits="0123456789"
                android:inputType="number"
                android:singleLine="true" />

            <TextView
                style="@style/Texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:autoText="false" android:inputType="textEmailAddress"/>

            <TextView
                style="@style/Texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usuario" />

            <EditText
                android:id="@+id/txtUsuario"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:autoText="false" android:inputType="text"/>

            <TextView
                style="@style/Texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clave" />

            <EditText
                android:id="@+id/txtClave"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:autoText="false"
                android:password="true" android:inputType="textPassword" />

            <Button
                android:id="@+id/btnAdd"
                style="@style/Boton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/edit"
                android:onClick="btnAddUser_Click"
                android:padding="15dip"
                android:text="@string/registrarDatos" />

            <Button
                android:id="@+id/btnRegresar"
                style="@style/Boton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/undo"
                android:onClick="btnRegresar_Click"
                android:padding="15dip"
                android:text="@string/regresar" />

            <TextView
                android:id="@+id/txtEmps"
                style="@style/Texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeroUsuarios" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>